Fixed up the login page, though the password type toggle still is the wrong color. Will need to come back to that.

--- a/Web/Vue/src/sass/material-dashboard/_variables.scss
+++ b/Web/Vue/src/sass/material-dashboard/_variables.scss
@@ -2,8 +2,8 @@
 @import "./colors";
 
 //  Brand Colors
-$brand-primary:                    $purple !default;
-$brand-success:                    $green !default;
+$brand-primary:                    $blue !default;
+$brand-success:                    $blue-700 !default;
 $brand-danger:                     $red !default;
 $brand-warning:                    $orange !default;
 $brand-info:                       $cyan !default;
